@@ -1,6 +1,6 @@
 {
   "name": "theme-government",
-  "version": "1.0.0",
+  "version": "2.8.0",
   "description": "",
   "private": true,
   "scripts": {
