@@ -203,10 +203,10 @@
         <h1>We — goverment</h1>
       </div>
     </section>
-    <div class="bg-col fw-intro text-xs-center">
+    <div class="bg-col fw-intro text-center">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-12">
             <p class="project-details__inner">Inspired by the octopus, we’re on the road to creating materials that
               render things almost invisible. Yet as Philip Ball points out, the history of camouflage and our limited
               understanding of how creatures hide in nature may make the task trickier than it seems. Inspired by the
