@@ -307,8 +307,8 @@
     <div class="news main-news bg-col">
       <div class="container">
         <!-- 	<div class="row"> -->
-        <div class="row">
-          <article class="col-xm-6 col-sm-6 col-md-4 col-lg-3 news-item">
+        <div class="d-flex flex-column flex-md-row justify-content-center justify-content-lg-around">
+          <article class="news-item d-none d-lg-block col-lg-4 col-xl-3">
             <h3><a href="#">White House and House Republicans Clash on president new Immigration Plan</a></h3>
             <a href="#" class="news-item__image-wrap">
               <img class="news-item__image" src="images/news/themeGovernment-News_04.jpg" alt="">
@@ -342,7 +342,7 @@
                 </svg>
             </a>
           </article>
-          <article class="col-xm-6 col-sm-6 col-md-4 col-lg-3 news-item hidden-sm">
+          <article class="news-item d-none d-xl-block col-xl-3">
             <h3><a href="#">The Prince Islands — place to visit</a></h3>
             <a href="#" class="news-item__image-wrap">
               <img class="news-item__image" src="images/news/themeGovernment-News_02.jpg" alt="">
@@ -378,8 +378,8 @@
                 </svg>
             </a>
           </article>
-          <div class="clearfix visible-xm"></div>
-          <article class="col-xm-6 col-sm-6 col-md-4 col-lg-3 news-item hidden-sm hidden-md">
+          <div class="clearfix"></div>
+          <article class="news-item d-none d-xlp-block col-xl-3">
             <h3><a href="#">Rio de Janeiro City, city of God</a></h3>
             <a href="#" class="news-item__image-wrap">
               <img class="news-item__image" src="images/news/themeGovernment-News_05.jpg" alt="">
@@ -414,7 +414,7 @@
                 </svg>
             </a>
           </article>
-          <section class="news-item-big col-xm-6 col-sm-6 col-md-4 col-lg-3">
+          <section class="news-item-big col-sm-6 col-lg-4 col-xl-3">
             <div class="news-item-big__left-t"></div>
             <div class="news-item-big__left-b"></div>
             <div class="news-item-big__right-t"></div>
@@ -427,12 +427,12 @@
             <a class="news-item-big__header" href=""><h3>Hеalth care plan most progressive nowdays</h3></a>
 
             <div class="row">
-              <div class="col-xs-6 col-lg-4 news-item-big__diagramm">
+              <div class="col-6 col-lg-4 news-item-big__diagramm">
                 <div class="blue-chart-diagramm sm-diagramm">
-                  <canvas class="blue-chart" width="100" height="100" data-percent="67" data-size="80"></canvas>
+                  <canvas class="blue-chart" width="100" height="130" data-percent="67" data-size="80"></canvas>
                 </div>
               </div>
-              <div class="col-xs-6 col-lg-8 news-item-big__diagramm-text">
+              <div class="col-6 col-lg-8 news-item-big__diagramm-text">
                 <p>Millions of Americans now have the chance to buy quality, affordable care through the new health
                   insurance marketplace</p>
                 <a href="" class="btn-read-more">Read more
@@ -475,21 +475,7 @@
           </section>
         </div>
         <div id="fullW-news-item" class="row fullW-news-item">
-          <div class="col-sm-12 col-md-6 col-lg-7 chart-img">
-            <div class="row">
-              <div class="col-xs-7 red-chart-diagramm">
-                <div class="big-diagramm">
-                  <canvas class="red-chart" width="100" height="100" data-percent="77" data-size="85"></canvas>
-                </div>
-              </div>
-              <div class="col-xs-7 chart-img__img">
-                <!-- <div class="thumbnail"> -->
-                <img src="images/news/water.jpg" alt="" class="img-circle">
-                <!-- </div> -->
-              </div>
-            </div>
-          </div>
-          <div class="col-xs-10 offset-xs-1 col-sm-10 offset-sm-1 col-md-6 offset-md-0 col-lg-5 offset-lg-0 fullW-news-item__text">
+          <div class="col-10 offset-1 col-sm-10 offset-sm-1 col-md-6 offset-md-0 col-lg-5 offset-lg-0 fullW-news-item__text">
             <h3><a href="#">Just $5 can provide a person with clean drinking water.</a></h3>
 
             <div class="line-abt">
@@ -515,6 +501,20 @@
             <p class="fullW-news-item__p">Millions of Americans now have the chance to buy quality, affordable care
               through the new health insurance marketplace</p>
             <a href="#" class="btn btn-support btn-lg">Support just from $5</a>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-7 chart-img">
+            <div class="row">
+              <div class="col-7 red-chart-diagramm">
+                <div class="big-diagramm">
+                  <canvas class="red-chart" width="100" height="100" data-percent="77" data-size="85"></canvas>
+                </div>
+              </div>
+              <div class="col-7 chart-img__img">
+                <!-- <div class="thumbnail"> -->
+                <img src="images/news/water.jpg" alt="" class="img-circle">
+                <!-- </div> -->
+              </div>
+            </div>
           </div>
         </div>
         <!-- 	</div> -->
@@ -789,10 +789,10 @@
             <h2 class="section-hdr section-hdr__icon section-hdr__icon-tw br-t">Last tweets</h2>
 
             <div class="row tw-item">
-              <div class="col-xs-5 col-xm-3 col-sm-1 offset-sm-1 col-md-2 col-lg-2 offset-lg-0 tw-item__author">
+              <div class="col-5 col-xm-3 col-sm-1 offset-sm-1 col-md-2 col-lg-2 offset-lg-0 tw-item__author">
                 <img src="images/twitter/themeGovernment-Avatars_02.jpg" alt="" class="img-circle tw-item__image">
               </div>
-              <div class="col-xs-7 col-xm-7 col-sm-9 col-md-7 col-lg-10 tw-item__content">
+              <div class="col-7 col-xm-7 col-sm-9 col-md-7 col-lg-10 tw-item__content">
                 <span class="tw-item__title">Amanda Dew <span class="tw-item__date">2h</span></span>
                 <span class="tw-item__addr">@amanda_dew</span>
 
@@ -801,10 +801,10 @@
               </div>
             </div>
             <div class="row tw-item">
-              <div class="col-xs-5 col-xm-3 col-sm-1 offset-sm-1 col-md-2 col-lg-2 offset-lg-0 tw-item__author">
+              <div class="col-5 col-xm-3 col-sm-1 offset-sm-1 col-md-2 col-lg-2 offset-lg-0 tw-item__author">
                 <img src="images/twitter/themeGovernment-Avatars_01.jpg" alt="" class="img-circle tw-item__image">
               </div>
-              <div class="col-xs-7 col-xm-7 col-sm-9 col-md-7 col-lg-10 tw-item__content">
+              <div class="col-7 col-xm-7 col-sm-9 col-md-7 col-lg-10 tw-item__content">
                 <span class="tw-item__title">John Doe<span class="tw-item__date">3h</span></span>
                 <span class="tw-item__addr">@john_doe</span>
 
@@ -814,10 +814,10 @@
               </div>
             </div>
             <div class="row tw-item">
-              <div class="col-xs-5 col-xm-3 col-sm-1 offset-sm-1 col-md-2 col-lg-2 offset-lg-0 tw-item__author">
+              <div class="col-5 col-xm-3 col-sm-1 offset-sm-1 col-md-2 col-lg-2 offset-lg-0 tw-item__author">
                 <img src="images/twitter/themeGovernment-Avatars_03.jpg" alt="" class="img-circle tw-item__image">
               </div>
-              <div class="col-xs-7 col-xm-7 col-sm-9 col-md-7 col-lg-10 tw-item__content">
+              <div class="col-7 col-xm-7 col-sm-9 col-md-7 col-lg-10 tw-item__content">
                 <span class="tw-item__title">Bill Russel<span class="tw-item__date">12h</span></span>
                 <span class="tw-item__addr">@bill_russel</span>
 
@@ -830,7 +830,7 @@
               <a href="#" class="btn btn-secondary tw-item__follow">Follow</a>
             </div>
           </div>
-          <div id="event-tabs" class="col-md-7 col-lg-7 tab-bl">
+          <div id="event-tabs" class="col-md-7 col-lg-8 tab-bl">
             <h2 class="section-hdr">Events</h2>
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
@@ -868,12 +868,12 @@
                 <a class="tablist__item" href="">
                   <div>SEE</div>
                   <div>ALL</div>
-                  <!-- <svg  class="tablist__all-arr"  x="0px" y="0px"
-                width="7.145px" height="30px" viewBox="0 0 7.145 30" enable-background="new 0 0 7.145 30" xml:space="preserve">
-                <path fill-rule="evenodd" clip-rule="evenodd" fill="#002266" d="M0,0l7.145,15.002L0,30V0z"/> -->
-                  <svg  class="tablist__all-arr"  x="0px" y="0px" width="17.145px" height="30px" viewBox="-10 0 17.145 30" enable-background="new -10 0 17.145 30" xml:space="preserve">
-                      <path fill="#002266" d="M-10,30V0H0l7.145,15.002L0,30H-10z" />
-                    </svg>
+                  <!-- <svg version="1.1" class="tablist__all-arr" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								width="7.145px" height="30px" viewBox="0 0 7.145 30" enable-background="new 0 0 7.145 30" xml:space="preserve"></svg> -->
+								<path fill-rule="evenodd" clip-rule="evenodd" fill="#002266" d="M0,0l7.145,15.002L0,30V0z"/>
+                  <svg version="1.1" class="tablist__all-arr" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="17.145px" height="30px" viewBox="-10 0 17.145 30" enable-background="new -10 0 17.145 30" xml:space="preserve">
+                    <path fill="#002266" d="M-10,30V0H0l7.145,15.002L0,30H-10z" />
+                  </svg>
                 </a>
               </li>
             </ul>
@@ -882,48 +882,45 @@
             <div class="tab-content">
               <div class="tab-pane fade in active" id="sep30">
                 <!-- <div class=""> -->
-                <article class="event-bl tab-item">
-                  <!-- <img src="../uploads/events/toronto.jpg" alt="" class="event-bl__img"> -->
-                  <img src="images/events/themeGovernment-Events_01.jpg" alt="" class="event-bl__img">
-
-                  <div class="event-bl__inner">
-                    <h3><a href="#">Check out new culture</a></h3>
-
-                    <div class="prop-icons">
-                      <div class="prop-icons__item">
-                        <div class="prop-icons__item-left">
-                          <i class="gic gic-baloone"></i>
+                  <article class="event-bl tab-item">
+                    <img src="images/events/themeGovernment-Events_01.jpg" alt="" class="event-bl__img">
+                    <div class="event-bl__inner">
+                      <h3><a href="#">Check out new culture</a></h3>
+                      <div class="prop-icons">
+                        <div class="prop-icons__item">
+                          <div class="prop-icons__item-left">
+                            <i class="gic gic-baloone"></i>
+                          </div>
+                          <div class="prop-icons__item-right">
+                            <div class="prop-icons__item-hd">Destination</div>
+                            <div class="prop-icons__item-vl">Cherry hill</div>
+                          </div>
                         </div>
-                        <div class="prop-icons__item-right">
-                          <div class="prop-icons__item-hd">Destination</div>
-                          <div class="prop-icons__item-vl">Cherry hill</div>
+                        <div class="prop-icons__item">
+                          <div class="prop-icons__item-left">
+                            <i class="gic gic-clock"></i>
+                          </div>
+                          <div class="prop-icons__item-right">
+                            <div class="prop-icons__item-hd">at</div>
+                            <div class="prop-icons__item-vl">12:00</div>
+                          </div>
                         </div>
-                      </div>
-                      <div class="prop-icons__item">
-                        <div class="prop-icons__item-left">
-                          <i class="gic gic-clock"></i>
-                        </div>
-                        <div class="prop-icons__item-right">
-                          <div class="prop-icons__item-hd">at</div>
-                          <div class="prop-icons__item-vl">12:00</div>
-                        </div>
-                      </div>
-                      <div class="prop-icons__item">
-                        <div class="prop-icons__item-left">
-                          <i class="gic gic-label"></i>
-                        </div>
-                        <div class="prop-icons__item-right">
-                          <div class="prop-icons__item-hd">For</div>
-                          <div class="prop-icons__item-vl">$1</div>
+                        <div class="prop-icons__item">
+                          <div class="prop-icons__item-left">
+                            <i class="gic gic-label"></i>
+                          </div>
+                          <div class="prop-icons__item-right">
+                            <div class="prop-icons__item-hd">For</div>
+                            <div class="prop-icons__item-vl">$1</div>
+                          </div>
                         </div>
                       </div>
+                      <a href="#" class="btn-read-primary btn-read-primary__inverse">
+                        <span>More</span>
+                      </a>
                     </div>
-                    <a href="#" class="btn-read-primary btn-read-primary__inverse">
-                      <span>More</span>
-                    </a>
-                  </div>
-                  <a href="#" class="event-bl__link"></a>
-                </article>
+                    <a href="#" class="event-bl__link"></a>
+                  </article>
               </div>
               <!-- </div> -->
               <div class="tab-pane fade" id="oct1">
