@@ -4,6 +4,7 @@ All notable changes to this project will be documented in this file.
 ## [2.8.0] - 2020-07-17
 ### Changed
 - Fix using Google Map develop api.
+- Partial fixes of index page.
 
 ## [2.7.0] - 2020-07-17
 ### Removed
